--- a/style.css
+++ b/style.css
@@ -16,10 +16,11 @@ body {
   }
   
   /* ✅ 지도 영역 */
+  /* 높이: 500px; / 60vh -> 브라우저 높이의 60% */
   #map {
     position: relative;
     width: 100%;
-    height: 350px;
+    height: 60vh;
     margin-top: 10px;
   }
 
