--- a/style.css
+++ b/style.css
@@ -1,13 +1,8 @@
 /* ✅ 전체 화면 스타일 */
-html, body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-}
-
 body {
-  display: flex;
-  flex-direction: column;
+  font-family: sans-serif;
+  padding: 20px;
+  background-color: #f5f5f5;
 }
 
 /* header, footer 섹션 높이는 콘텐츠에 맡김 */
@@ -27,12 +22,11 @@ footer {
   }
   
   /* ✅ 지도 영역 */
-/* #map 이 남은 공간을 모두 차지 */
-#map {
-  flex: 1;
-  width: 100%;
-  margin-top: 10px;
-}
+  #map {
+    width: 100%;
+    height: 70hv;
+    margin-top: 10px;
+  }
 
   /* ✅ 내위치 버튼튼 */
   #locateBtn {
